--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<center>
 <pre>
 
  █    ██  ███▄    █ ▓█████▄ ▓█████  ██▀███      ▄████▄   ▒█████   ███▄    █   ██████ ▄▄▄█████▓ ██▀███   █    ██  ▄████▄  ▄▄▄█████▓ ██▓ ▒█████   ███▄    █ 
@@ -12,3 +13,4 @@
                      ░                         ░                                                                ░                                         
 
 </pre>
+</center>
